--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Sondage Open Source</title>
 
   <!-- Inclure SurveyJS et jQuery -->
-  <script src="https://unpkg.com/jquery"></script>
-  <script src="https://unpkg.com/survey-jquery@1.8.59/survey.jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/survey-jquery@1.9.58/survey.jquery.min.js"></script>
 
   <!-- Inclure le thème par défaut de SurveyJS -->
-  <link href="https://unpkg.com/survey-core/defaultV2.min.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/survey-core@1.9.58/defaultV2.min.css" rel="stylesheet"/>
 
   <!-- Ajouter des styles pour le conteneur du sondage -->
   <style>
