--- a/index.html
+++ b/index.html
@@ -1,219 +1,102 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sondage Open Source</title>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sondage Open Source</title>
 
-  <!-- Inclure jQuery et SurveyJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://unpkg.com/survey-jquery@1.9.58/survey.jquery.min.js"></script>
+    <!-- Inclure jQuery et SurveyJS -->
+    <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/survey-core@1.12.3/survey.core.min.js"></script>
+    <script src="https://unpkg.com/survey-core@1.12.3/survey.i18n.min.js"></script>
+    <script src="https://unpkg.com/survey-core@1.12.3/themes/index.min.js"></script>
+    <script src="https://unpkg.com/survey-js-ui@1.12.3/survey-js-ui.js"></script>
 
-  <!-- Inclure le thème par défaut de SurveyJS -->
-  <link href="https://unpkg.com/survey-core@1.9.58/defaultV2.min.css" rel="stylesheet"/>
-
-  <!-- Styles personnalisés -->
-  <style>
-    body {
-      background-color: #f4f7f6;
-      font-family: 'Arial', sans-serif;
-    }
-    #surveyContainer {
-      width: 80%;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+    <!-- Inclure le thème par défaut de SurveyJS -->
+    <link rel="stylesheet" href="https://unpkg.com/survey-core@1.12.3/defaultV2.min.css" />
+    <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
-  <div id="surveyContainer"></div>
+    <!-- Conteneur pour afficher le sondage -->
+    <div id="surveyElement" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; min-height: 100%; height:100%"></div>
 
-  <script>
-    // Colle ici le contenu de json.js (les questions du sondage)
-    const json = {
-  "title": "coss survey",
-  "description": "test",
-  "pages": [
-    {
-      "name": "page1",
-      "elements": [
-        {
-          "type": "boolean",
-          "name": "question1",
-          "title": "test 1"
-        },
-        {
-          "type": "tagbox",
-          "name": "question2",
-          "title": "test 2",
-          "choices": [
+    <!-- Scripts pour configurer et afficher le sondage -->
+    <script>
+        const json = {
+          "title": "coss survey",
+          "description": "test",
+          "pages": [
             {
-              "value": "Item 1",
-              "text": "a"
-            },
-            {
-              "value": "Item 2",
-              "text": "b"
-            },
-            {
-              "value": "Item 3",
-              "text": "c"
-            },
-            {
-              "value": "Item 4",
-              "text": "d"
-            },
-            {
-              "value": "Item 5",
-              "text": "e"
+              "name": "page1",
+              "elements": [
+                {
+                  "type": "boolean",
+                  "name": "question1",
+                  "title": "test 1"
+                },
+                {
+                  "type": "tagbox",
+                  "name": "question2",
+                  "title": "test 2",
+                  "choices": [
+                    { "value": "Item 1", "text": "a" },
+                    { "value": "Item 2", "text": "b" },
+                    { "value": "Item 3", "text": "c" },
+                    { "value": "Item 4", "text": "d" },
+                    { "value": "Item 5", "text": "e" }
+                  ]
+                },
+                {
+                  "type": "rating",
+                  "name": "question3",
+                  "title": "test 3",
+                  "rateCount": 7,
+                  "rateMax": 7
+                },
+                {
+                  "type": "ranking",
+                  "name": "question4",
+                  "title": "test 4",
+                  "choices": [
+                    { "value": "Item 1", "text": "a" },
+                    { "value": "Item 2", "text": "b" },
+                    { "value": "Item 3", "text": "c" },
+                    { "value": "Item 4", "text": "d" }
+                  ]
+                }
+              ]
             }
-          ]
-        },
-        {
-          "type": "rating",
-          "name": "question3",
-          "title": "test 3",
-          "rateCount": 7,
-          "rateMax": 7
-        },
-        {
-          "type": "ranking",
-          "name": "question4",
-          "title": "test 4",
-          "choices": [
-            {
-              "value": "Item 1",
-              "text": "a"
-            },
-            {
-              "value": "Item 2",
-              "text": "b"
-            },
-            {
-              "value": "Item 3",
-              "text": "c"
-            },
-            {
-              "value": "Item 4",
-              "text": "d"
-            }
-          ]
-        }
-      ]
-    }
-  ],
-  "navigateToUrl": "https://www.europeansaasbenchmark.com/"
-}
+          ],
+          "navigateToUrl": "https://www.europeansaasbenchmark.com/"
+        };
 
-    // Colle ici le contenu de theme.js (le thème personnalisé)
-    const themeJson = {
-  "themeName": "sharp",
-  "colorPalette": "light",
-  "isPanelless": true,
-  "backgroundImage": "",
-  "backgroundOpacity": 1,
-  "backgroundImageAttachment": "scroll",
-  "backgroundImageFit": "cover",
-  "cssVariables": {
-    "--sjs-corner-radius": "4px",
-    "--sjs-base-unit": "8px",
-    "--sjs-shadow-small": "0px 0px 0px 1px rgba(0, 0, 0, 0.2)",
-    "--sjs-shadow-inner": "0px 0px 0px 1px rgba(0, 0, 0, 0.25)",
-    "--sjs-border-default": "rgba(0, 0, 0, 0.25)",
-    "--sjs-border-light": "rgba(0, 0, 0, 0.25)",
-    "--sjs-general-backcolor": "rgba(255, 255, 255, 1)",
-    "--sjs-general-backcolor-dark": "rgba(228, 228, 228, 1)",
-    "--sjs-general-backcolor-dim-light": "rgba(238, 238, 238, 1)",
-    "--sjs-general-backcolor-dim-dark": "rgba(220, 220, 220, 1)",
-    "--sjs-general-forecolor": "rgba(0, 0, 0, 0.91)",
-    "--sjs-general-forecolor-light": "rgba(0, 0, 0, 0.6)",
-    "--sjs-general-dim-forecolor": "rgba(0, 0, 0, 0.91)",
-    "--sjs-general-dim-forecolor-light": "rgba(0, 0, 0, 0.6)",
-    "--sjs-secondary-backcolor": "rgba(255, 152, 20, 1)",
-    "--sjs-secondary-backcolor-light": "rgba(255, 152, 20, 0.1)",
-    "--sjs-secondary-backcolor-semi-light": "rgba(255, 152, 20, 0.25)",
-    "--sjs-secondary-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-secondary-forecolor-light": "rgba(255, 255, 255, 0.25)",
-    "--sjs-shadow-small-reset": "0px 0px 0px 0px rgba(0, 0, 0, 0.2)",
-    "--sjs-shadow-medium": "0px 2px 6px 0px rgba(0, 0, 0, 0.1)",
-    "--sjs-shadow-large": "0px 8px 16px 0px rgba(0, 0, 0, 0.1)",
-    "--sjs-shadow-inner-reset": "0px 0px 0px 0px rgba(0, 0, 0, 0.25)",
-    "--sjs-border-inside": "rgba(0, 0, 0, 0.16)",
-    "--sjs-special-red-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-special-green": "rgba(25, 179, 148, 1)",
-    "--sjs-special-green-light": "rgba(25, 179, 148, 0.1)",
-    "--sjs-special-green-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-special-blue": "rgba(67, 127, 217, 1)",
-    "--sjs-special-blue-light": "rgba(67, 127, 217, 0.1)",
-    "--sjs-special-blue-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-special-yellow": "rgba(255, 152, 20, 1)",
-    "--sjs-special-yellow-light": "rgba(255, 152, 20, 0.1)",
-    "--sjs-special-yellow-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-article-font-xx-large-textDecoration": "none",
-    "--sjs-article-font-xx-large-fontWeight": "700",
-    "--sjs-article-font-xx-large-fontStyle": "normal",
-    "--sjs-article-font-xx-large-fontStretch": "normal",
-    "--sjs-article-font-xx-large-letterSpacing": "0",
-    "--sjs-article-font-xx-large-lineHeight": "64px",
-    "--sjs-article-font-xx-large-paragraphIndent": "0px",
-    "--sjs-article-font-xx-large-textCase": "none",
-    "--sjs-article-font-x-large-textDecoration": "none",
-    "--sjs-article-font-x-large-fontWeight": "700",
-    "--sjs-article-font-x-large-fontStyle": "normal",
-    "--sjs-article-font-x-large-fontStretch": "normal",
-    "--sjs-article-font-x-large-letterSpacing": "0",
-    "--sjs-article-font-x-large-lineHeight": "56px",
-    "--sjs-article-font-x-large-paragraphIndent": "0px",
-    "--sjs-article-font-x-large-textCase": "none",
-    "--sjs-article-font-large-textDecoration": "none",
-    "--sjs-article-font-large-fontWeight": "700",
-    "--sjs-article-font-large-fontStyle": "normal",
-    "--sjs-article-font-large-fontStretch": "normal",
-    "--sjs-article-font-large-letterSpacing": "0",
-    "--sjs-article-font-large-lineHeight": "40px",
-    "--sjs-article-font-large-paragraphIndent": "0px",
-    "--sjs-article-font-large-textCase": "none",
-    "--sjs-article-font-medium-textDecoration": "none",
-    "--sjs-article-font-medium-fontWeight": "700",
-    "--sjs-article-font-medium-fontStyle": "normal",
-    "--sjs-article-font-medium-fontStretch": "normal",
-    "--sjs-article-font-medium-letterSpacing": "0",
-    "--sjs-article-font-medium-lineHeight": "32px",
-    "--sjs-article-font-medium-paragraphIndent": "0px",
-    "--sjs-article-font-medium-textCase": "none",
-    "--sjs-article-font-default-textDecoration": "none",
-    "--sjs-article-font-default-fontWeight": "400",
-    "--sjs-article-font-default-fontStyle": "normal",
-    "--sjs-article-font-default-fontStretch": "normal",
-    "--sjs-article-font-default-letterSpacing": "0",
-    "--sjs-article-font-default-lineHeight": "28px",
-    "--sjs-article-font-default-paragraphIndent": "0px",
-    "--sjs-article-font-default-textCase": "none",
-    "--sjs-general-backcolor-dim": "#bf4c61",
-    "--sjs-primary-backcolor": "#0c5eac",
-    "--sjs-primary-backcolor-dark": "rgba(12, 94, 172, 1)",
-    "--sjs-primary-backcolor-light": "rgba(12, 94, 172, 0.1)",
-    "--sjs-primary-forecolor": "rgba(255, 255, 255, 1)",
-    "--sjs-primary-forecolor-light": "rgba(255, 255, 255, 0.25)",
-    "--sjs-special-red": "rgba(229, 10, 62, 1)",
-    "--sjs-special-red-light": "rgba(229, 10, 62, 0.1)",
-    "--sjs-font-surveytitle-family": "Georgia, serif"
-  },
-  "headerView": "basic"
-}
+        const themeJson = {
+          "themeName": "sharp",
+          "colorPalette": "light",
+          "isPanelless": true,
+          "backgroundImage": "",
+          "backgroundOpacity": 1,
+          "backgroundImageAttachment": "scroll",
+          "backgroundImageFit": "cover",
+          "cssVariables": {
+            "--sjs-corner-radius": "4px",
+            "--sjs-base-unit": "8px",
+            "--sjs-shadow-small": "0px 0px 0px 1px rgba(0, 0, 0, 0.2)",
+            "--sjs-general-backcolor": "rgba(255, 255, 255, 1)",
+            "--sjs-primary-backcolor": "#0c5eac",
+            "--sjs-primary-forecolor": "rgba(255, 255, 255, 1)"
+          },
+          "headerView": "basic"
+        };
 
-    // Initialisation et affichage du sondage
-    const survey = new Survey.Model(json);
-    survey.applyTheme(themeJson);
+        const survey = new Survey.Model(json);
+        survey.applyTheme(themeJson);
+        survey.onComplete.add((sender, options) => {
+            console.log(JSON.stringify(sender.data, null, 3));
+        });
 
-    survey.onComplete.add((sender, options) => {
-      console.log(JSON.stringify(sender.data, null, 3));
-    });
-
-    $("#surveyContainer").Survey({ model: survey });
-  </script>
+        $("#surveyElement").Survey({ model: survey });
+    </script>
 </body>
 </html>
